--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-./automl/__pycache__/*
-./automl/intervalTarget/results/*
-./automl/results/*
-./data/*
+automl/__pycache__/*
+automl/intervalTarget/results/*
+automl/results/*
+data/*
 data/*
