--- a/frameworks/autosklearn.yml
+++ b/frameworks/autosklearn.yml
@@ -1,4 +1,4 @@
-name: autosklearn
+name: sklearn
 channels:
   - conda-forge
   - defaults
@@ -303,6 +303,7 @@ dependencies:
   - zope=1.0=py37_1
   - zope.interface=4.5.0=py37h14c3975_0
   - zstd=1.3.7=h0b5b093_0
+  - jsonpickle 
   - pip:
     - auto-sklearn==0.5.2
     - configspace==0.4.10
@@ -317,7 +318,7 @@ dependencies:
     - pynisher==0.5.0
     - pyrfr==0.7.4
     - python-slugify==3.0.2
-    - scikit-learn==0.19.2
+    - scikit-learn==0.20.2
     - six==1.10.0
     - smac==0.8.0
     - sphinx-rtd-theme==0.4.3
@@ -325,5 +326,5 @@ dependencies:
     - typing==3.7.4
     - xgboost==0.90
     - xmltodict==0.12.0
-prefix: /root/anaconda3/envs/autosklearn
+prefix: /root/anaconda3/envs/sklearn
 
