--- a/src/automl/.vscode/settings.json
+++ b/src/automl/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "python.pythonPath": "/home/yozhuz/miniconda3/envs/autosklearn/bin/python"
+    "python.pythonPath": "/home/yozhuz/miniconda3/envs/autosklearn/bin/python",
+    "python.testing.promptToConfigure": false,
+    "python.testing.pytestEnabled": false,
+    "python.testing.unittestEnabled": false,
+    "python.testing.nosetestsEnabled": false
 }
